--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -3,6 +3,7 @@
     .hero-text-box {
         width: 100%;
         padding: 0 2%;
+        padding-left: 50px;
     }
     
     .row { padding: 0 2%; }
