--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -676,11 +676,28 @@ footer p {
 
 
 
+/*
 .movie {
     text-align: center;
     margin-top: 80px;
     margin-left: auto;
     margin-right: auto;
+}
+*/
+
+.movie {
+    position: relative;
+    padding-bottom: 56.25%; /*アスペクト比 16:9の場合の縦幅*/
+    height: 0;
+    overflow: hidden;
+}
+
+.movie iframe {
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
 }
 
 .publication {
