--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -685,19 +685,58 @@ footer p {
 }
 */
 
+/*
 .movie {
     position: relative;
-    padding-bottom: 56.25%; /*アスペクト比 16:9の場合の縦幅*/
+    width: 100%;
+    max-width: 560px;
+    
+    padding-bottom: 56.25%;
     height: 0;
+    max-width: 560px;
     overflow: hidden;
 }
 
+.movie::before {
+    content: "";
+    display: block;
+    width: 100%;
+    padding-bottom: 56.25%;
+}
+
 .movie iframe {
-     position: absolute;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+*/
+
+/* Set your aspect ratio */
+.movie {
+  position: relative;
+  overflow: hidden;
+  height: 0;
+  padding-bottom: 56.25%; /* creates a 16:9 aspect ratio */
+}
+
+.movie iframe,
+.movie embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+}
+
+/* And set the max-width of the parent element */
+.video-wrap {
+  display: block; 
+  margin: auto;
+  width: 100%;
+  max-width: 600px;
 }
 
 .publication {
